--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -126,16 +126,17 @@
         {%- endif %}
         
           <!-- Links/Buttons -->
+          
           <div class="links">
+            <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
           {%- if entry.abstract %}
+          <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
             <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
           {%- endif %}
           {%- if entry.arxiv %}
             <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
           {%- endif %}
-          {%- if entry.bibtex_show %}
-            <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
-          {%- endif %}
+
           {%- if entry.html %}
             <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
           {%- endif %}
@@ -186,13 +187,16 @@
           <div class="abstract hidden">
             <p>{{ entry.abstract }}</p>
           </div>
+
           {%- endif -%}
 
-          {% if entry.bibtex_show -%}
-          <!-- Hidden bibtex block -->
-          <div class="bibtex hidden">
+           <div class="bibtex hidden">
             {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
           </div>
-          {%- endif %}
+
+          <!--{% if entry.bibtex_show -%}-->
+          <!-- Hidden bibtex block -->
+
+          <!--{%- endif %}-->
         </div>
       </div>
